# Full-Stack-Gen-AI-BootCamp-KrishNaik-

./: .gitignore  30_05_2026_LLM_HuggingFaceHub.ipynb  Assignment_Stage1_Stage2_finetuning.ipynb  Assignment_Stage1_Stage2_finetuning1.ipynb  Assignment_non_instruction_finetuning.ipynb  Class-30_05_2026_LLM_HuggingFaceHub.ipynb  Class_30_05_2026_Dataset_HuggingFace.ipynb  Class_Word_Embedding.ipynb  End_to_End_LLM_Fine_Tuning_Techniques_Non_Instruction,Instruction_And_Preference_Data_using_Huggingface.ipynb  LLM_Fine_Tuning_Techniques_Non_Instruction,Instruction_And_Preference_Data_using_Huggingface.ipynb  LLM_Finetuning_with_Unsloth.ipynb  pyproject.toml  requirements.txt
.claude/: settings.local.json
Assignment/: Text_Feature_Engineering (1).ipynb  Text_Feature_Engineering.ipynb  reviews_dataset.csv
Assignment/Access_Different_LLMs/: LLMsImageToTextDiffAPIs.ipynb  LLMsTextToImageDiffAPIs.ipynb  LLMsTextToTextDiffAPIs.ipynb  README.md  app.py  config.py  llm_router.py  requirements.txt
Class-03-29-Mar/: Test.ipynb
Class-04-04-2026/: OneHoldEncoding.ipynb  Test.ipynb
Class-04-04-Apr-2026/: BagOfWords.ipynb  OneHoldEncoding.ipynb  Test.ipynb
Class-05-04-2026/: TermFrequency And Inverse DocumentFrequenceyTF-IDF.ipynb
Class-06-04-2026/: Word2VecCustomTraining.ipynb
Class-06-Apr-2026/: Word2VecCustomTraining.ipynb
Class-11-04-2026/: Class_Word_Embedding.ipynb
Class-18-04-2026/: SOTA-llm-embedding.ipynb
Class-31-11-July-2026_RAG_full_Pipeline/: RAG_Pipeline.ipynb
Class-32-18-July-2026_DataParsing_Extended/: data_parsing_docling.ipynb
(+47 files in other folders)
