[project]
name = "practicals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "langchain[google-genai]>=1.3.1",
    "nltk>=3.9.4",
]
